apps/navidrome/navidrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: navidrome
          image: 'deluan/navidrome:0.64.2'
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 4533
          livenessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 4533
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /ping
              port: 4533
            failureThreshold: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /music
              name: music
              readOnly: true
      volumes:
        - name: data
          hostPath:
            path: /opt/navidrome
            type: DirectoryOrCreate
        - name: music
          hostPath:
            path: ${MUSIC_PATH}
            type: Directory
