apps/navidrome/navidrome-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: music
spec:
  selector:
    app: navidrome
  ports:
    - name: web
      port: 4533
      targetPort: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-external
  namespace: music
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: music-authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-api
  namespace: music
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /rest
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-internal
  namespace: music
spec:
  ingressClassName: traefik
  rules:
    - host: navidrome.${PRIVATE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: music
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.${PRIVATE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
